[gd_scene load_steps=4 format=1]

[ext_resource path="res://UFOControl.gd" type="Script" id=1]
[ext_resource path="res://UFOMesh.gd" type="Script" id=2]

[sub_resource type="FixedMaterial" id=1]

flags/visible = true
flags/double_sided = false
flags/invert_faces = false
flags/unshaded = true
flags/on_top = false
flags/lightmap_on_uv2 = true
flags/colarray_is_srgb = true
params/blend_mode = 0
params/depth_draw = 1
params/line_width = 1.0
fixed_flags/use_alpha = false
fixed_flags/use_color_array = false
fixed_flags/use_point_size = false
fixed_flags/discard_alpha = false
fixed_flags/use_xy_normalmap = false
params/diffuse = Color( 0.759389, 0.746613, 0.910156, 1 )
params/specular = Color( 0, 0, 0, 1 )
params/emission = Color( 0, 0, 0, 1 )
params/specular_exp = 40
params/detail_mix = 1.0
params/normal_depth = 1
params/shader = 3
params/shader_param = 0.5
params/glow = 0
params/point_size = 1.0
uv_xform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
textures/diffuse_tc = 0
textures/detail_tc = 0
textures/specular_tc = 0
textures/emission_tc = 0
textures/specular_exp_tc = 0
textures/glow_tc = 0
textures/normal_tc = 0
textures/shade_param_tc = 0

[node name="UFO" type="Spatial"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
script/script = ExtResource( 1 )

[node name="UFOMesh" type="ImmediateGeometry" parent="."]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
layers = 1
geometry/visible = true
geometry/material_override = SubResource( 1 )
geometry/cast_shadow = 1
geometry/receive_shadows = true
geometry/range_begin = 0.0
geometry/range_end = 0.0
geometry/extra_cull_margin = 0.0
geometry/billboard = false
geometry/billboard_y = false
geometry/depth_scale = false
geometry/visible_in_all_rooms = false
geometry/use_baked_light = false
geometry/baked_light_tex_id = 0
script/script = ExtResource( 2 )

[node name="TimerVector" type="Timer" parent="."]

process_mode = 1
wait_time = 3.0
one_shot = false
autostart = true

[node name="TimerShot" type="Timer" parent="."]

process_mode = 1
wait_time = 1.5
one_shot = false
autostart = true

[connection signal="timeout" from="TimerVector" to="." method="_on_TimerVector_timeout"]

[connection signal="timeout" from="TimerShot" to="." method="_on_TimerShot_timeout"]


